// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Autoplay renders a animated avatar 1`] = `
<div
  className="account__avatar"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundImage": "url(/animated/alice.gif)",
      "backgroundSize": "100px 100px",
      "height": "100px",
      "width": "100px",
    }
  }
/>
`;

exports[`<Avatar /> Still renders a still avatar 1`] = `
<div
  className="account__avatar"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundImage": "url(/static/alice.jpg)",
      "backgroundSize": "100px 100px",
      "height": "100px",
      "width": "100px",
    }
  }
/>
`;
